# lox-cc

./: .clang-tidy  .clang-tidy-ignore  .gitignore  CMakeLists.txt  README.md  TODO.md  lox  test
.cache/clangd/index/: debug.cpp.5AA6CB94D20A1374.idx  debug.hpp.BF7BD3AAB6915FCC.idx  doctest.h.72C08172BB5AC190.idx  interpreter.cpp.0FE6C8EE8EABD059.idx  interpreter.hpp.EA9DB1F4A38FA9CD.idx  lexer.cpp.B0A092DBEE73CD09.idx  lexer.hpp.C4A1D7C51E9750CA.idx  main.cpp.5405EE90F7CDDFDC.idx  main.cpp.5C023103A31D8070.idx  tokens.cpp.EFCDEEF51B2A1437.idx  tokens.hpp.4ED28FA6D74906E8.idx  types.cpp.F24430D496144855.idx  types.hpp.DC03A40ECE82AF5F.idx  usage.hpp.CA8A1ED8CE30472E.idx
clox/: README.md  lox  lox.c
ilox/: Makefile
ilox/include/: debug.hpp  lexer.hpp  tokens.hpp
ilox/src/: lexer.cpp  main.cpp  tokens.cpp
include/: ast.hpp  debug.hpp  interpreter.hpp  lexer.hpp  tokens.hpp  types.hpp  usage.hpp
jlox/lox/: pom.xml
jlox/lox/src/main/java/com/lox/: ASTPrinter.java  Environment.java  Interpreter.java  Lox.java  LoxCallable.java  LoxFunction.java  Parser.java  Return.java  Scanner.java  Stmt.java  Token.java  TokenType.java
jlox/lox/src/test/java/com/lox/: AppTest.java
jlox/lox/src/tool/: GenerateAST.java
src/: CMakeLists.txt  ast.cpp  debug.cpp  interpreter.cpp  lexer.cpp  main.cpp  tokens.cpp  types.cpp
tests/: main.cpp
tools/: generate_ast.cpp
tools/impl/: Grouping.cpp
